Wczytywanie danych do struktur

--- a/projekt/projekt2/projekt2.vcxproj
+++ b/projekt/projekt2/projekt2.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{7830C81F-7163-4CB4-B31C-B3B5D9BF9F41}</ProjectGuid>
+    <ProjectGuid>{D2A3D12B-ABA1-425B-B09F-21A6171D5D90}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>struktury</RootNamespace>
+    <RootNamespace>projekt2</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -146,7 +146,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cwiczenia.cpp" />
+    <ClInclude Include="DodajDroge.h" />
+    <ClInclude Include="DodajMiasto.h" />
+    <ClInclude Include="DodajSasiada.h" />
+    <ClInclude Include="Struktury.h" />
+    <ClInclude Include="WczytajDane.h" />
+    <ClInclude Include="WczytajPrzelaczniki.h" />
+    <ClInclude Include="WyswietlPomoc.h" />
+    <ClInclude Include="ZnajdzMiasto.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="DodajDroge.cpp" />
+    <ClCompile Include="DodajMiasto.cpp" />
+    <ClCompile Include="DodajSasiada.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Struktury.cpp" />
+    <ClCompile Include="WczytajDane.cpp" />
+    <ClCompile Include="WczytajPrzelaczniki.cpp" />
+    <ClCompile Include="WyswietlPomoc.cpp" />
+    <ClCompile Include="ZnajdzMiasto.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
